Added firebae authentication, loading, logout feature.

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
   
-<script>
+<!-- <script>
     window.fbAsyncInit = function() {
       window.FB.init({
         appId      : '401563483744236',
@@ -43,7 +43,7 @@
         window.localStorage.setItem('login',true);
         window.location.href="/home";
     }
-  </script>
+  </script> -->
 </head>
 
 <body>
